<resources>
    <string name="app_name">HealthFood</string>
    <!--Login Activity-->
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Login</string>
    <string name="dont_have_account">¿No tienes cuenta? </string>
    <string name="create_here"> Crea una aquí</string>

    <!--Crear cuenta Activity-->
    <string name="toolbar_tittle_createaccount">Crear Cuenta</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="text_button_createaccount">Únete</string>

    <!--Ver Productos Activity-->
    <string name="bar_cafeteria">Cafetería</string>
    <string name="bar_heladeria">Heladería</string>
    <string name="bar_organicos">Alimentos Organicos</string>
    <string name="empanada">Empanada</string>
    <string name="Informacion">Información</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Teléfono</string>
</resources>
